--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,5 +12,5 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Test2Application"
         tools:targetApi="31" />
-
+<!--suzuki-->
 </manifest>
