--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,12 @@
                 android:value="" />
         </activity>
     </application>
-<!--森田-->
+<!--森田
+金田
+さんをつけろ
+田中
+鈴木
+栗田
+大久保
+-->
 </manifest>
