--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:exported="false"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.Test2Application.NoActionBar">
-            <meta-datas
+            <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
